--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,9 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating']>alternative['rating']:\n",
-    "        return resturant[rat]"
+    "        return resturant['name']\n",
+    "    else:\n",
+    "        return "
    ]
   },
   {
