Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,8 @@
     "    if restaurant['rating']>alternative['rating']:\n",
     "        return resturant['name']\n",
     "    else:\n",
-    "        return alternative['name']"
+    "        return alternative['name']\n",
+    "better_rest"
    ]
   },
   {
