Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -170,7 +170,7 @@
     "        return resturant['name']\n",
     "    else:\n",
     "        return alternative['name']\n",
-    "better_restaurant(restarurant, alternative)"
+    "better_restaurant(, alternative)"
    ]
   },
   {
