--- a/index.ipynb
+++ b/index.ipynb
@@ -155,9 +155,9 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating']>alternative['rating']:\n",
-    "        return resturant['name']\n",
+    "        return resturant\n",
     "    else:\n",
-    "        return alternative['name']\n"
+    "        return alternative\n"
    ]
   },
   {
