--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
-    "    for restaurant in res"
+    "    for restaurant in resturants:\n",
+    "        if restau"
    ]
   },
   {
