--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,8 @@
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
     "    for restaurant in resturants:\n",
-    "        if not restaurant is ['is_closed']"
+    "        if not restaurant is ['is_closed']:\n",
+    "            retur"
    ]
   },
   {
