Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,8 @@
     "    open = []\n",
     "    for restaurant in resturants:\n",
     "        if not restaurant is ['is_closed']:\n",
-    "            open.append[restarurant]"
+    "            open.append[restarurant]\n",
+    "        return "
    ]
   },
   {
